# BucketPlugin

./: CMakeLists.txt
include/: Bucket.hpp
src/: Bucket.cpp
